// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldRouterForm initializes 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "disabled": false,
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="split_by_contact_field"
  title="Split by Contact Field"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "description": "Split by a contact field",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
          "cases",
        ],
        "name": "Split by Contact Field",
        "type": "split_by_contact_field",
      }
    }
    onChange={[MockFunction]}
  />
  <div
    className="leadIn"
  >
    If the contact's
    <div
      className="fieldSelect select-small"
    >
      <AssetSelector
        additionalOptions={
          Array [
            Object {
              "id": "name",
              "name": "Name",
              "type": "property",
            },
            Object {
              "id": "language",
              "name": "Language",
              "type": "property",
            },
            Object {
              "id": "channel",
              "name": "Channel",
              "type": "property",
            },
            Object {
              "id": "ext",
              "name": "External ID",
              "type": "scheme",
            },
            Object {
              "id": "facebook",
              "name": "Facebook ID",
              "type": "scheme",
            },
            Object {
              "id": "fcm",
              "name": "Firebase ID",
              "type": "scheme",
            },
            Object {
              "id": "jiochat",
              "name": "Jiochat ID",
              "type": "scheme",
            },
            Object {
              "id": "line",
              "name": "Line ID",
              "type": "scheme",
            },
            Object {
              "id": "mailto",
              "name": "Email Address",
              "type": "scheme",
            },
            Object {
              "id": "tel",
              "name": "Phone Number",
              "type": "scheme",
            },
            Object {
              "id": "telegram",
              "name": "Telegram ID",
              "type": "scheme",
            },
            Object {
              "id": "twitter",
              "name": "Twitter Handle",
              "type": "scheme",
            },
            Object {
              "id": "twitterid",
              "name": "Twitter ID",
              "type": "scheme",
            },
            Object {
              "id": "wechat",
              "name": "Wechat ID",
              "type": "scheme",
            },
            Object {
              "id": "whatsapp",
              "name": "Whatsapp Number",
              "type": "scheme",
            },
            Object {
              "id": "viber",
              "name": "Viber ID",
              "type": "scheme",
            },
          ]
        }
        entry={
          Object {
            "value": Object {
              "id": "favorite_color",
              "name": null,
              "type": "field",
            },
          }
        }
        name="Contact Field"
        onChange={[Function]}
        searchable={true}
        sortFunction={[Function]}
        styles={
          Object {
            "control": [Function],
            "indicatorsContainer": [Function],
            "input": [Function],
            "menuList": [Function],
            "option": [Function],
            "singleValue": [Function],
            "valueContainer": [Function],
          }
        }
      />
    </div>
  </div>
  <CaseList
    cases={
      Array [
        Object {
          "exitName": null,
          "kase": Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": null,
            "type": "has_any_word",
            "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
          },
          "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
          "valid": true,
        },
      ]
    }
    data-spec="cases"
    onCasesUpdated={[Function]}
  />
  <OptionalTextInput
    helpText="By naming the result, you can reference it later using @run.results.whatever_the_name_is"
    name="Result Name"
    onChange={[Function]}
    toggleText="Save as.."
    value={
      Object {
        "value": "Color",
      }
    }
  />
</Dialog>
`;

exports[`FieldRouterForm should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "disabled": false,
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="split_by_contact_field"
  title="Split by Contact Field"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "description": "Split by a contact field",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
          "cases",
        ],
        "name": "Split by Contact Field",
        "type": "split_by_contact_field",
      }
    }
    onChange={[MockFunction]}
  />
  <div
    className="leadIn"
  >
    If the contact's
    <div
      className="fieldSelect select-small"
    >
      <AssetSelector
        additionalOptions={
          Array [
            Object {
              "id": "name",
              "name": "Name",
              "type": "property",
            },
            Object {
              "id": "language",
              "name": "Language",
              "type": "property",
            },
            Object {
              "id": "channel",
              "name": "Channel",
              "type": "property",
            },
            Object {
              "id": "ext",
              "name": "External ID",
              "type": "scheme",
            },
            Object {
              "id": "facebook",
              "name": "Facebook ID",
              "type": "scheme",
            },
            Object {
              "id": "fcm",
              "name": "Firebase ID",
              "type": "scheme",
            },
            Object {
              "id": "jiochat",
              "name": "Jiochat ID",
              "type": "scheme",
            },
            Object {
              "id": "line",
              "name": "Line ID",
              "type": "scheme",
            },
            Object {
              "id": "mailto",
              "name": "Email Address",
              "type": "scheme",
            },
            Object {
              "id": "tel",
              "name": "Phone Number",
              "type": "scheme",
            },
            Object {
              "id": "telegram",
              "name": "Telegram ID",
              "type": "scheme",
            },
            Object {
              "id": "twitter",
              "name": "Twitter Handle",
              "type": "scheme",
            },
            Object {
              "id": "twitterid",
              "name": "Twitter ID",
              "type": "scheme",
            },
            Object {
              "id": "wechat",
              "name": "Wechat ID",
              "type": "scheme",
            },
            Object {
              "id": "whatsapp",
              "name": "Whatsapp Number",
              "type": "scheme",
            },
            Object {
              "id": "viber",
              "name": "Viber ID",
              "type": "scheme",
            },
          ]
        }
        entry={
          Object {
            "value": Object {
              "id": "favorite_color",
              "name": null,
              "type": "field",
            },
          }
        }
        name="Contact Field"
        onChange={[Function]}
        searchable={true}
        sortFunction={[Function]}
        styles={
          Object {
            "control": [Function],
            "indicatorsContainer": [Function],
            "input": [Function],
            "menuList": [Function],
            "option": [Function],
            "singleValue": [Function],
            "valueContainer": [Function],
          }
        }
      />
    </div>
  </div>
  <CaseList
    cases={Array []}
    data-spec="cases"
    onCasesUpdated={[Function]}
  />
  <OptionalTextInput
    helpText="By naming the result, you can reference it later using @run.results.whatever_the_name_is"
    name="Result Name"
    onChange={[Function]}
    toggleText="Save as.."
    value={
      Object {
        "value": "",
      }
    }
  />
</Dialog>
`;

exports[`FieldRouterForm updates should save changes 1`] = `
Object {
  "cases": Array [
    Object {
      "exitName": "Red",
      "kase": Object {
        "arguments": Array [
          "red",
        ],
        "type": "has_any_word",
      },
    },
    Object {
      "exitName": "Red",
      "kase": Object {
        "arguments": Array [
          "maroon",
        ],
        "type": "has_any_word",
      },
    },
    Object {
      "exitName": "Green",
      "kase": Object {
        "arguments": Array [
          "green",
        ],
        "type": "has_any_word",
      },
    },
  ],
  "field": Object {
    "value": Object {
      "id": "favorite_color",
      "name": null,
      "type": "field",
    },
  },
  "resultName": Object {
    "value": "Favorite Color",
  },
  "valid": true,
}
`;

exports[`FieldRouterForm updates should save changes 2`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": "Red",
          "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        },
        Object {
          "destination_node_uuid": null,
          "name": "Green",
          "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        },
        Object {
          "destination_node_uuid": null,
          "name": "Other",
          "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            "type": "has_any_word",
          },
          Object {
            "arguments": Array [
              "maroon",
            ],
            "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            "type": "has_any_word",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "exit_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "type": "has_any_word",
          },
        ],
        "default_exit_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        "operand": "@contact.fields.favorite_color",
        "result_name": "Favorite Color",
        "type": "switch",
      },
      "uuid": "48e0a64d-3b3c-4e3e-9d95-7844093edc90",
      "wait": null,
    },
    "ui": Object {
      "config": Object {
        "operand": Object {
          "id": "favorite_color",
          "name": null,
          "type": "field",
        },
      },
      "position": null,
      "type": "split_by_contact_field",
    },
  },
]
`;
